# crosszip

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Makefile  PYODIDE_EVALUATION.md  PYODIDE_SUMMARY.md  README.md  README.qmd  hooks.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  setup.py  sitemap.xml
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: ci.yaml  codspeed.yml  docs.yml  github-release.yml  pre-commit.yaml  qa.yml  release.yml  test.yml
changelog/: index.html  index.md
crosszip/: index.html
docs/: advanced.md  index.md  pyodide-demo.md  pyodide-implementation.md  pytest-plugin.md  robots.txt  usage.md
docs/integrations/: llms.md
docs/javascripts/: config.js  pyodide_runner.css  pyodide_runner.js  run_code_main.js
hextools/: script.R
integrations/llms/: index.html
javascripts/: pyodide_runner.js
overrides/: main.html
pytest-plugin/: index.html
reference/crosszip/: index.html  index.md
reference/plugin/: index.html  index.md
scripts/: generate_llmstxt.py
search/: search_index.json
src/crosszip/: __init__.py  crosszip.py  exceptions.py  plugin.py  setup.py
src/crosszip/tests/: test-crosszip.py
src/crosszip_parametrize/: crosszip_parametrize.py
tests/: conftest.py  test-crosszip.py  test_crosszip.py  test_crosszip_parametrize.py  test_plugin.py
tests/snapshots/test-crosszip/test_crosszip_with_iterables/iterable12-iterable22-iterable32-set_inputs/: set_inputs.json
