[project]
name = "crosszip"
version = "1.4.0"
description = "Apply a given function to all combinations of elements from multiple iterables"
readme = "README.md"
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["iterables"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/IndrajeetPatil/crosszip"
Documentation = "https://www.indrapatil.com/crosszip/"
Repository = "https://github.com/IndrajeetPatil/crosszip"
Issues = "https://github.com/IndrajeetPatil/crosszip/issues"
Changelog = "https://github.com/IndrajeetPatil/crosszip/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
crosszip_parametrize = "crosszip.plugin"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "jupyter>=1.1.1",
    "zensical>=0.0.43",
    "mkdocstrings-python>=2.0.3",
    "ty>=0.0.47",
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "pytest-codspeed>=5.0.2",
    "pytest-cov>=7.1.0",
    "pytest-random-order>=1.2.0",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "CPY", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # docstring requirements
    "D",
    "DOC",
    # tests can have asserts
    "S101",
]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
    # error on problems parsing pytest configuration
    "--strict-config",
    # error on using unregistered marker
    "--strict-markers",
    # show extra test summary info for everything
    "-ra",
    # include more verbose output
    "--verbose",
    # using pytest-random-order plugin option
    "--random-order",
]
testpaths = ["tests"]
filterwarnings = ["error"]
xfail_strict = true
python_files = ["test_*.py", "test-*.py", "tests.py", "test.py"]

[tool.coverage.run]
branch = true
source = ["crosszip"]

[tool.coverage.report]
fail_under = 100
format = "markdown"
sort = "-Cover"
show_missing = true
skip_empty = true

[tool.ty.src]
exclude = [".venv", "build", "dist", "docs"]

[tool.ty.environment]
python-version = "3.10"

[tool.uv]
required-version = ">=0.11.15"
